<resources>
    <string name="app_name">MyWaiter</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail адрес</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_password_second">Повторите пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="t_register">Еще не тута?</string>
    <string name="action_register">Зарегаца</string>
    <string name="profile_data">Данные профиля:</string>
    <string name="email_status">Статус почты: </string>
    <string name="account_exit">Выйти из аккаунта</string>
    <string name="action_new_vac">Создать новую вакансию</string>
    <string name="vacansy_create">Создать вакансию</string>
</resources>